--- a/style.css
+++ b/style.css
@@ -18,6 +18,8 @@ body{
     object-fit: cover;
 }
 #navigation{
+    z-index: 2;
+    position: relative;
     display: flex;
     justify-content: center;
     gap: 280px;
@@ -86,11 +88,16 @@ header{
     align-items: center;
 }
 header img{
+    z-index: 1;
+    position: relative;
     width:100%;
     height: 100%;
     object-fit: contain;
+    -webkit-box-shadow: 0px 0px 11px 4px rgba(0,0,0,0.24); 
+    box-shadow: 0px 0px 11px 4px rgba(0,0,0,0.24);
 }
 #texte-bouton{
+    z-index: 2;
     display: flex;
     align-self: center;
     position: absolute;
